deepviewrt-sys/src/ffi.rs

extern "C" {
    #[doc = " Initializes the library with optional parameters.  This function _MUST_ be\n called before any others (though nn_version and nn_strerror are safe) and\n _MUST_ not be called again unless care is taken to protect this call.\n\n @note As of DeepViewRT 2.4.32 this function does not do anything except on\n RaspberryPi platforms.  This could change in the future so it is safer to\n call the function for future compatibility.\n\n @return NN_SUCCESS after successfully initializing the library.\n @return NN_ERROR_INTERNAL if the library fails to initialize.\n\n @since 2.4"]
    pub fn nn_init(options: *const NNOptions) -> NNError;
}
extern "C" {
    #[doc = " The actual size of the NNEngine structure.  This will differ from the size\n defined by @ref NN_ENGINE_SIZEOF as the later is padded for future API\n extensions while this function returns the actual size currently required.\n\n @return NNEngine structure size as reported by @ref sizeof().\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_sizeof() -> usize;
}
extern "C" {
    #[doc = " Initializes the NNEngine structure using the provided memory or allocating a\n new buffer is none was provided.\n\n When providing memory it must be at least the size returned by\n @ref nn_engine_sizeof() and for statically initiallized arrays the\n @ref NN_ENGINE_SIZEOF can be used instead which is padded for future API\n extensions.\n\n @note previous to version 2.4.32 the memory parameter is required otherwise\n NULL will always be returned and no engine structure is created.\n\n @param memory Pointer to the start of where a NNEngine object should be\n initialized.\n\n @return Pointer to the initialized NNEngine structure.\n @return NULL if memory was NULL and malloc using @ref nn_engine_size()\n  returns NULL.\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_init(memory: *mut ::std::os::raw::c_void) -> *mut NNEngine;
}
extern "C" {
    #[doc = " Returns handle of the NNEngine object.\n\n @param memory Pointer to the NNEngine structure\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_native_handle(engine: *mut NNEngine) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Releases the memory that was being used by the engine.\n\n @param engine Pointer to the engine object.\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_release(engine: *mut NNEngine);
}
extern "C" {
    #[doc = " Loads the plugin to provided engine object.  The plugin should point to an\n engine plugin library either as an absolute or relative path or be found in\n the standard OS search path for shared libraries.\n\n @param engine Pointer to the engine object.\n @param plugin String of the absolute or relative path to the plugin.\n\n @return NN_ERROR_INVALID ENGINE given the engine pointer is NULL or\n the plugin does not have the necessary functions.\n @return NN_ERROR_MISSING_RESOURCE given the plugin dll cannot be found.\n @return The error returned by the plugin's init function given a valid engine\n and dll.\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_load(engine: *mut NNEngine, plugin: *const ::std::os::raw::c_char) -> NNError;
}
extern "C" {
    #[doc = " Unloads the plugin from the given engine object.\n\n @param engine Pointer to the engine object.\n\n @return NN_ERROR_INVALID_ENGINE given the engine pointer is NULL.\n @return NN_ERROR_INTERNAL if the plugin dll could not be closed properly.\n @return The NNError from the plugin's cleanup function.\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_unload(engine: *mut NNEngine);
}
extern "C" {
    #[doc = " Returns the name of the engine object.\n\n @param engine Pointer to the engine object.\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_name(engine: *mut NNEngine) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the version of the engine object.\n\n @param engine Pointer to the engine object.\n\n @public @memberof NNEngine\n @since 2.0"]
    pub fn nn_engine_version(engine: *mut NNEngine) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the size of the tensor object for preparing memory allocations.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_sizeof() -> usize;
}
extern "C" {
    #[doc = " Initializes the tensor using provided memory.  The memory MUST be at least\n the size returned by @ref nn_tensor_sizeof().  This size does not include\n the actual tensor data which is allocated separately, either by requesting\n the implementation to allocate the buffer or attaching to externally\n allocated memory.\n\n The tensor created by this function has no data associated to it and is of\n rank-0.\n\n @param memory The pointer to be initialized to a NNTensor object.\n @param engine Pointer to the engine object.\n\n @return NULL given the memory pointer is a null pointer.\n @return Pointer to the newly created NNTensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_init(
        memory: *mut ::std::os::raw::c_void,
        engine: *mut NNEngine,
    ) -> *mut NNTensor;
}
extern "C" {
    #[doc = " Releases the memory used by the tensor object.\n\n @param tensor Pointer to the tensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_release(tensor: *mut NNTensor);
}
extern "C" {
    #[doc = " Returns the engine owning this tensor, could be NULL.\n\n @param tensor Pointer to the tensor object.\n\n @return Pointer to the engine object to which the tensor is associated.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_engine(tensor: *mut NNTensor) -> *mut NNEngine;
}
extern "C" {
    #[doc = " Returns the native handle of the tensor object.  This is an internal API for\n access internal structures.\n\n @param tensor Pointer to the tensor object.\n\n @private @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_native_handle(tensor: *mut NNTensor) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Sets the tensor objects native handle to the one provided.\n\n @param tensor Pointer to the tensor object.\n @param handle Pointer to the handle object.\n\n @private @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_set_native_handle(tensor: *mut NNTensor, handle: *mut ::std::os::raw::c_void);
}
#[doc = " Callback function to free an auxiliary object, called from nn_tensor_release.\n\n @private @memberof NNTensor\n @since 2.1"]
pub type nn_aux_object_free = ::std::option::Option<unsafe extern "C" fn(tensor: *mut NNTensor)>;
extern "C" {
    #[doc = " Configures an auxiliary object for the tensor.  This is a private API used\n for attaching auxiliary buffers.\n\n @private @memberof NNTensor\n @since 2.1"]
    pub fn nn_tensor_set_aux_object(
        tensor: *mut NNTensor,
        aux_object: *mut ::std::os::raw::c_void,
        aux_object_free: nn_aux_object_free,
    );
}
extern "C" {
    #[doc = " Returns the auxiliary object for the tensor, or NULL if none is attached.\n\n @private @memberof NNTensor\n @since 2.1"]
    pub fn nn_tensor_aux_object(tensor: *mut NNTensor) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Returns the auxiliary object's free function, or NULL if none is attached.\n\n @private @memberof NNTensor\n @since 2.3"]
    pub fn nn_tensor_aux_free(tensor: *mut NNTensor) -> nn_aux_object_free;
}
extern "C" {
    #[doc = " Extended version of the auxiliary object API which allows additional objects\n to be attached to the tensor using name-based indexing.\n\n @private @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_set_aux_object_by_name(
        tensor: *mut NNTensor,
        name: *const ::std::os::raw::c_char,
        aux_object: *mut ::std::os::raw::c_void,
        aux_object_free: nn_aux_object_free,
        buffer_ownership: bool,
        name_ownership: bool,
    );
}
extern "C" {
    #[doc = " Acquire the auxiliary object associated with the given name parameter.\n\n @private @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_aux_object_by_name(
        tensor: *mut NNTensor,
        name: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Frees the auxiliary object associated with the given name parameter.\n\n @private @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_aux_free_by_name(
        tensor: *mut NNTensor,
        name: *const ::std::os::raw::c_char,
    ) -> nn_aux_object_free;
}
extern "C" {
    #[doc = " Retrieves the panel size of the tensor when it has been panel-shuffled for\n improved tiling performance.  The panel size is the vectorization length.\n\n @private @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_panel_size(tensor: *mut NNTensor) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the panel size of the tensor.  This is primarily an internal API used\n to store the vectorization length when shuffling tensors into an optimized\n tile format.\n\n @private @memberof NNTensor\n @since 2.4"]
    pub fn nn_tensor_set_panel_size(tensor: *mut NNTensor, panel_size: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " Synchronize the tensor and all preceeding events in the chain.\n\n This is used for engines which may not immediately evaluate tensor operations\n but instead pass events around, this call will synchronize the event chain\n leading to this tensor.\n\n @param tensor Pointer to the tensor object.\n\n @return NN_SUCCESS if the sync was successful or ignored by engines which do\n not implement this API.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_sync(tensor: *mut NNTensor) -> NNError;
}
extern "C" {
    #[doc = " Returns the time information stored in the tensor.  The time is returned\n in nanoseconds of the duration of the last operation the wrote into this\n tensor.  causes a nn_tensor_sync on the target tensor.\n\n This is used for measuring the time an operation takes by capturing the time\n the operation took into the destination tensor of the operation.  The time\n is not the time it takes to write to the tensor, this is captured by the\n @ref nn_tensor_io_time() function, but the time it took the operation to\n complete (not including map/unmap times).\n\n @param tensor Pointer to the tensor object.\n\n @return Nanoseconds of processing time for the last operation which wrote\n into this tensor.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_time(tensor: *mut NNTensor) -> i64;
}
extern "C" {
    #[doc = " Returns the I/O time information stored in the tensor.  The time is returned\n in nanoseconds of the duration of the last map/unmap pair.  When tensors are\n mapped to the CPU (no accelerator engine is loaded) then times are expected\n to be zero time as no mapping is actually required and the internal pointer\n is simply returned.  When an accelerator engine is used, such as OpenVX,\n then the io_time measures the time the map/unmap or copy operations took to\n complete.\n\n @param tensor Pointer to the tensor object.\n\n @return Nanoseconds of time spent in the map/unmap calls.\n\n @public @memberof NNTensor\n @since 2.1"]
    pub fn nn_tensor_io_time(tensor: *mut NNTensor) -> i64;
}
extern "C" {
    #[doc = " Writes the  tensor inforamtion to the FILE stream provided.  The format is\n \"[D0 D1 D2 D3]\" where D0..D3 are the dimensions provided.  If the data\n parameter is true the format will be followed by \": ...\" where ... is the\n string representation of the tensor's data.\n\n @warning Before version 2.4.32 this function always assumes float32 tensors\n and will therefore lead to segmentation faults when used with integer\n tensors.\n\n @param out Pointer to the FILE stream where the tensor will be written to.\n @param tensor Pointer to the tensor object.\n\n @public @memberof NNTensor\n @since 2.0"]
    pub fn nn_tensor_printf(tensor: *mut NNTensor, data: bool, out: *mut FILE);
}
